manifests/pvc-debugger.yml
kind: Pod
apiVersion: v1
metadata:
  name: volume-debugger
spec:
  volumes:
  - name: volume-to-debug
    persistentVolumeClaim:
      claimName: <CLAIM NAME GOES HERE>
  containers:
  - name: debugger
    image: busybox
    command: ['sleep', '3600']
    volumeMounts:
    - mountPath: "/data"
      name: volume-to-debug
    resources: {}
